--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -511,13 +511,7 @@ map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 map /  console search%space
 map -  search_next
 map =  search_next forward=False
-map ct search_next order=tag
-map cs search_next order=size
-map ci search_next order=mimetype
-map cc search_next order=ctime
-map cm search_next order=mtime
-map ca search_next order=atime
-map <C-f> fzf
+map <C-f> fzf_select
 
 # Tabs
 map <C-n>     tab_new
