--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -340,6 +340,9 @@ map     q quit
 map : console
 copymap q ZZ ZQ
 
+# lazygit
+map <c-g> shell lazygit
+
 map R     reload_cwd
 map F     set freeze_files!
 map <C-r> reset
